--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+.App{
+  display: flex;
+  justify-content: space-between;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-top: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form{
+  margin-top: 50px;
+  margin-left:auto ;
+  margin-right: auto;
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.form >input{
+  padding: 10px;
+  border: 2px solid whitesmoke;
+  outline: none;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form > button{
+  cursor: pointer;
+  background-color:#025464;
+  color: whitesmoke;
+  padding: 10px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
+
+.form > button:hover{
+  background-color: whitesmoke;
+  color:#025464 ;
+}
+
+.header{
+  width: 20vw;
+  color: #025464;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.map{
+  margin-top: 20px;
+  height: 80vh;
+  width: 60vw;
+  margin-left:auto ;
+  margin-right: auto;
+  padding: 5px;
+  
+}
+
